<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_characters"
            android:title="@string/characters" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_locations"
            android:title="@string/locations" />
        <item
            android:id="@+id/nav_episodes"
            android:icon="@drawable/ic_episodes"
            android:title="@string/episodes" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_random"
            android:title="@string/random" />
    </group>
</menu>